--- a/index.html
+++ b/index.html
@@ -8,22 +8,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/globle-reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/angular.js"></script>
+
+    <script src="js/moment.js?v=1"></script>
+
+    <script src="js/angular.js?v=1"></script>
     <script src="js/ui-router.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/routes.js"></script>
-    <script src="services/data-service.js"></script>
-    <script src="controller/home/home.js"></script>
-    <script src="controller/applicatin-controller/application-controller.js"></script>
-    <script src="controller/show-searched-profile/show-search-profile.js"></script>
-    <script src="controller/login-controller/login-controller.js"></script>
-    <script src="controller/user-profile/user-view-edit-profile.js"></script>
+    <script src="js/raw-html.js"></script>
+
+    <script type="text/javascript" src="app/app.js"></script>
+    <script type="text/javascript" src="app/routes.js"></script>
+
+    <script type="text/javascript" src="app/controller/home-controller.js"></script>
+    <script type="text/javascript" src="app/controller/login/login-controller.js"></script>
+
+    <script type="text/javascript" src="app/services/data-service.js"></script>
 </head>
 
-<body>
-    <div class="container" ui-view>
-
+<body ng-app="app">
+    <div class="container">
+        <ui-view></ui-view>
     </div>
 </body>
 
