--- a/pages/header/search-tab.html
+++ b/pages/header/search-tab.html
@@ -1,5 +1,5 @@
 <div ng-controller="homeCtrl">
-    <form ng-submit="searchData()" class="search-input-area">
+    <form ng-submit="goTodetails(query.q)" class="search-input-area">
         <span>
             <i class="fa fa-search" aria-hidden="true" style="margin-right: 10px;"></i>
         </span>
