--- a/pages/header/header-bar.html
+++ b/pages/header/header-bar.html
@@ -1,4 +1,4 @@
-<div ng-controller="loginController">
+<div ng-controller="headerCtrl">
     <header>
         <div class="wrap">
             <div class="header-left">
@@ -8,7 +8,7 @@
                 </a>
             </div>
 
-            <div class="search-area" ng-show="state">
+            <div class="search-area" ng-show="showSearchbar">
                 <div ng-include="'pages/header/search-tab.html'"></div>
             </div>
 
