--- a/pages/header/search-tab.html
+++ b/pages/header/search-tab.html
@@ -1,7 +1,7 @@
 <div ng-controller="searchCtrl">
     <form ng-submit="goTodetails(query.q)">
         <div class="search-location">
-            <input type="text" placeholder="Location" ng-click="toggleLocationmenu($event)" ng-model="query.cityName" id="locInput">
+            <input type="text" placeholder="Location" autocomplete="off" ng-click="toggleLocationmenu($event)" ng-model="query.cityName" id="locInput">
             <div class="detect-location-tab" ng-click="getLocation()">
                 <div>
                     <img src="../../img/detect-location-logo.png" width="10px" height="10px" alt="">
@@ -21,7 +21,7 @@
             <span>
                 <i class="fa fa-search" aria-hidden="true" style="margin-right: 10px;"></i>
             </span>
-            <input type="text" placeholder="Search for Doctors, Clinics, hospitals" ng-click="toggleSuggationmenu($event)" ng-model="query.q" id="suggInput">
+            <input type="text" placeholder="Search for Doctors, Clinics, hospitals" autocomplete="off" ng-click="toggleSuggationmenu($event)" ng-model="query.q" id="suggInput">
             <div class="suggation-tab" ng-show="suggationTab" id="suggationTab">
                 <ul>
                     <li ng-repeat="s in specialities | filter: query.q" ng-click="goTodetails(s)">
